[gd_scene load_steps=2 format=3 uid="uid://c7exd2o303ini"]

[ext_resource type="Script" path="res://Scenes & Scripts/Screens/options.gd" id="1_171km"]

[node name="Options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_171km")

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 87.0
offset_right = 364.0
offset_bottom = 147.0
text = "menu"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 682.0
offset_top = 245.0
offset_right = 1201.0
offset_bottom = 850.0

[node name="ContinueButtons" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 96.0
offset_top = 129.0
offset_right = 396.0
offset_bottom = 189.0
text = "continue"

[node name="QuitButtons" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 105.0
offset_top = 380.0
offset_right = 405.0
offset_bottom = 440.0
text = "quit"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/ContinueButtons" to="." method="_on_continue_buttons_pressed"]
[connection signal="pressed" from="Panel/QuitButtons" to="." method="_on_quit_buttons_pressed"]
